--- a/public/includes/dashboardNav.ejs
+++ b/public/includes/dashboardNav.ejs
@@ -13,19 +13,19 @@
 
       <hr class="thick-hr margin-top-10" />
 
-      <div class="nav nav-fill">
+      <div class="nav nav-pills nav-fill">
         <div class="nav-item">
           <a class="nav-link main-link" href="/admin">Dashboard</a>
         </div>
         <div class="nav-item">
-          <a class="nav-link main-link" href="/users">Add/Remove Users</a>
+          <a class="nav-link main-link" href="/users">Users</a>
         </div>
         <div class="nav-item">
-          <a class="nav-link main-link" href="/props">Add/Remove Properties</a>
+          <a class="nav-link main-link" href="/props">Properties</a>
         </div>
         <div class="nav-item">
-          <a class="nav-link main-link" href="/propImages">Add/Remove Property Images</a>
+          <a class="nav-link main-link" href="/propImages">Billing</a>
         </div>
       </div>
 
-      <hr class="thick-hr margin-bottom-30" />
+      <hr class="thick-hr" />
