--- a/public/includes/nav.ejs
+++ b/public/includes/nav.ejs
@@ -6,10 +6,10 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a id="properties" class="nav-link" href="/properties">Properties</a>
+                <a id="properties" class="nav-link" href="/properties">For Rent</a>
             </li>
             <li class="nav-item">
-                <a id="apply" class="nav-link" href="/apply">Apply</a>
+                <a id="apply" class="nav-link" href="/apply">Apply Online</a>
             </li>
             <li class="nav-item">
                 <a id="contact" class="nav-link" href="/contact">Contact Us</a>
