--- a/public/dashboard_admin/props/props.ejs
+++ b/public/dashboard_admin/props/props.ejs
@@ -44,21 +44,35 @@
                       </div>
                       <div class="row">              
                         <div class="col-md-4 mb-1">
-                          <input type="text" class="form-control" name="type" placeholder="Type">
+                          <select class="form-control" name="type">
+                            <option selected disabled>Type</option>
+                            <option>Single-Family Home</option>
+                            <option>Duplex / Double / 2-Family</option>
+                            <option>Efficiency / Studio</option>
+                            <option>Condominium</option>
+                            <option>Apartment</option>
+                          </select>
                         </div>          
                         <div class="col-md-4 mb-1">
                           <input type="text" class="form-control" name="sqft" placeholder="Square Foot">
                         </div>          
                         <div class="col-md-4 mb-1">
-                          <input type="text" class="form-control" name="stories" placeholder="Stories">
+                          <select class="form-control" name="stories">
+                            <option selected disabled>Stories</option>
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                          </select>
                         </div>
                       </div>
                       <div class="row">
                         <div class="col-md-6 mb-1">
-                          <input type="text" class="form-control" name="year" placeholder="Year Built">
+                          <input type="text" class="form-control is-invalid" name="year" placeholder="Year Built">
                         </div>      
                         <div class="col-md-6 mb-1">
-                          <input type="text" class="form-control" name="mainImage" placeholder="Main Image Name">
+                          <input type="text" class="form-control is-valid" name="mainImage" placeholder="Main Image Name">
                         </div>
                       </div>
                       <div class="row">
@@ -139,10 +153,9 @@
             <div class="tab-pane fade" id="delete-property">
 
               <div id="form">
-                <form class="container" action="/props/delete" method="post">
+                <form class="container mt-5 ml-5" action="/props/delete" method="post">
                   <div class="row">              
-                    <div class="col-md-12 mb-2  mt-3">
-                      <label for="id" class="sr-only">ID</label>              
+                    <div class="col-md-8 mb-2 mt-3">
                       <input type="text" class="form-control" name="id" placeholder="ID" required>
                     </div>
                   </div>          
