--- a/public/views/home.ejs
+++ b/public/views/home.ejs
@@ -6,18 +6,14 @@
 
       <% include ../includes/nav %>
 
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
+        <div class="jumbotron">
+          <h1 class="display-5">Let Us Help You Find It</h1>
+          <hr class="my-3" />
 
-      <div class='text-center'>
-        <h2>In progress...</h2>
-        <div class="progress">
-          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%"></div>
+          <p class="lead">
+            <a class="btn btn-dark btn-lg" href="/contact" role="button">Get in Touch</a>
+          </p>
         </div>
-      </div>
 
     </div>
 
