--- a/public/views/contact.ejs
+++ b/public/views/contact.ejs
@@ -4,13 +4,13 @@
   <body>
           
       <% include ../includes/nav %>
+
     <div class="container">
 
-        <div class="row">              
+        <div class="row mt-4">              
           <div class="col-md-7" id="contactForm">
             <form role="form">
-                <h2 class="form-signin-heading">Contact</h2>
-                <div class="form-group">
+              <div class="form-group">
                 <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
               </div>
               <div class="form-group">
