--- a/public/views/home.ejs
+++ b/public/views/home.ejs
@@ -6,7 +6,7 @@
 
       <% include ../includes/nav %>
 
-        <div class="jumbotron">
+        <div class="jumbotron mt-5">
           <h1 class="display-5">Let Us Help You Find It</h1>
           <hr class="my-3" />
 
