--- a/public/dashboard_admin/props/props.ejs
+++ b/public/dashboard_admin/props/props.ejs
@@ -96,31 +96,19 @@
                       <div class="row">              
                         <div class="col-md-12 mb-2">
                           <div class="checkbox">
-                            <label>
-                              <input type="checkbox" name="washer" value="true"> Washer
+                            <label class="custom-control custom-checkbox">
+                              <input type="checkbox" class="custom-control-input" name="washer" value="true">
+                              <span class="custom-control-indicator"></span>
+                              <span class="custom-control-description">Washer</span>
                             </label>
                           </div>
                         </div>
                         <div class="col-md-12 mb-2">
                           <div class="checkbox">
-                            <label>
-                              <input type="checkbox" name="dryer" value="true"> Dryer
-                            </label>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row">              
-                        <div class="col-md-12 mb-2">
-                          <div class="checkbox">
-                            <label>
-                              <input type="checkbox" name="garage" value="true"> Garage
-                            </label>
-                          </div>
-                        </div>
-                        <div class="col-md-12 mb-2">
-                          <div class="checkbox">
-                            <label>
-                              <input type="checkbox" name="basement" value="true"> Basement
+                            <label class="custom-control custom-checkbox">
+                              <input type="checkbox" class="custom-control-input" name="dryer" value="true">
+                              <span class="custom-control-indicator"></span>
+                              <span class="custom-control-description">Dryer</span>
                             </label>
                           </div>
                         </div>
@@ -128,15 +116,39 @@
                       <div class="row">              
                         <div class="col-md-12 mb-2">
                           <div class="checkbox">
-                            <label>
-                              <input type="checkbox" name="fence" value="true"> Fence
+                            <label class="custom-control custom-checkbox">
+                              <input type="checkbox" class="custom-control-input" name="garage" value="true"> 
+                              <span class="custom-control-indicator"></span>
+                              <span class="custom-control-description">Garage</span>
                             </label>
                           </div>
                         </div>
                         <div class="col-md-12 mb-2">
                           <div class="checkbox">
-                            <label>
-                              <input type="checkbox" name="occupied" value="true"> Occupied
+                            <label class="custom-control custom-checkbox">
+                              <input type="checkbox" class="custom-control-input" name="basement" value="true">
+                              <span class="custom-control-indicator"></span>
+                              <span class="custom-control-description">Basement</span>                              
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">              
+                        <div class="col-md-12 mb-2">
+                          <div class="checkbox">
+                            <label class="custom-control custom-checkbox">
+                              <input type="checkbox" class="custom-control-input" name="fence" value="true">
+                              <span class="custom-control-indicator"></span>
+                              <span class="custom-control-description">Fence</span>
+                            </label>
+                          </div>
+                        </div>
+                        <div class="col-md-12 mb-2">
+                          <div class="checkbox">
+                            <label class="custom-control custom-checkbox">
+                              <input type="checkbox" class="custom-control-input" name="occupied" value="true">
+                              <span class="custom-control-indicator"></span>
+                              <span class="custom-control-description">Occupied</span>
                             </label>
                           </div>
                         </div>
