--- a/public/dashboard_admin/admin.ejs
+++ b/public/dashboard_admin/admin.ejs
@@ -32,8 +32,8 @@
             <div class="tab-pane fade show active" id="administrators">
 
               <div class="table-responsive">
-                <table class="table table-striped ">
-                  <thead class="table-header-text">
+                <table class="table table-hover">
+                  <thead class="table-header-text thead-inverse">
                     <tr>
                       <th class="text-center">Name</th>
                       <th class="text-center">Email</th>
@@ -50,8 +50,8 @@
             <div class="tab-pane fade" id="registered-users">
 
               <div class="table-responsive">
-                <table class="table table-striped ">
-                  <thead class="table-header-text">
+                <table class="table table-hover">
+                  <thead class="table-header-text thead-inverse">
                     <tr>
                       <th class="text-center">Name</th>
                       <th class="text-center">Email</th>
@@ -80,8 +80,8 @@
             <div class="tab-pane fade" id="unregistered-users">
 
               <div class="table-responsive">
-                <table class="table table-striped ">
-                  <thead class="table-header-text">
+                <table class="table table-hover">
+                  <thead class="table-header-text thead-inverse">
                     <tr>
                       <th class="text-center">Name</th>
                       <th class="text-center">Email</th>
@@ -110,8 +110,8 @@
             <div class="tab-pane fade" id="properties">
 
               <div class="table-responsive">
-                <table class="table table-striped ">
-                  <thead class="table-header-text">
+                <table class="table table-hover">
+                  <thead class="table-header-text thead-inverse">
                     <tr>
                       <th class="text-center">ID</th>
                       <th class="text-center">Main Image</th>
