--- a/public/includes/dashboardNav.ejs
+++ b/public/includes/dashboardNav.ejs
@@ -1,4 +1,6 @@
 
+      <% include ../includes/settingsModal %>    
+
       <div class="row margin-bottom-10">
         <div class="col-9">
           <h2>
@@ -6,7 +8,7 @@
           </h2>
         </div>
         <div class="col-3 corner-button-container">
-          <a href="#" class="btn btn-outline-primary corner-link">Settings</a>
+          <a href="#" class="btn btn-outline-primary corner-link settingsButton">Settings</a>
           <a href="/logout" class="btn btn-outline-primary corner-link">Logout</a>           
         </div>
       </div>
