Adding data toggle for settings modal

--- a/public/includes/dashboardNav.ejs
+++ b/public/includes/dashboardNav.ejs
@@ -1,6 +1,4 @@
 
-      <% include ../includes/settingsModal %>    
-
       <div class="row margin-bottom-10">
         <div class="col-9">
           <h2>
@@ -8,7 +6,7 @@
           </h2>
         </div>
         <div class="col-3 corner-button-container">
-          <a href="#" class="btn btn-outline-primary corner-link settingsButton">Settings</a>
+          <a href="#" data-toggle="modal" data-target="#settingsModal" class="btn btn-outline-primary corner-link settingsButton">Settings</a>
           <a href="/logout" class="btn btn-outline-primary corner-link">Logout</a>           
         </div>
       </div>
@@ -29,5 +27,7 @@
           <a class="nav-link main-link" href="/propImages">Billing</a>
         </div>
       </div>
+
+      <% include ../includes/settingsModal %>    
 
       <hr class="thick-hr" />
