--- a/public/dashboard_admin/propImages/propImages.ejs
+++ b/public/dashboard_admin/propImages/propImages.ejs
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <% include ../includes/dashboardHead %>
-  <body class="container-fluid">
-    <div>
 
-      <% include ../includes/dashboardNav %>
+  <body class="container-fluid">
+    <% include ../includes/dashboardNav %>
 
       <div class="row">
         <div class="col-2">
@@ -83,9 +82,10 @@
           </div>      
         <% } %>
       <% } %>
-
+        
+    <!-- END NG -->
     </div>
-    
+
     <% include ../../includes/scripts %>
   </body>
 </html>
