--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -26,7 +26,7 @@
           <div class="row">              
             <div class="col-md-12 mb-2  mt-3">
               <label for="email" class="sr-only">Email</label>              
-              <input type="text" class="form-control form-control-warning" name="email" placeholder="Email" required>
+              <input type="text" class="form-control form-control-warning" name="email" placeholder="Email" autofocus required>
             </div>
           </div>
           <div class="row">
