--- a/public/dashboard_admin/users/users.ejs
+++ b/public/dashboard_admin/users/users.ejs
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <% include ../includes/dashboardHead %>
-  <body class="container-fluid">
-    <div>
 
-      <% include ../../includes/dashboardNav %>
+  <body class="container-fluid">
+    <% include ../../includes/dashboardNav %>
 
       <div class="row">
         <div class="col-2">
@@ -159,15 +158,10 @@
           </div>      
         <% } %>
       <% } %>
+      
+    <!-- END NG -->
+    </div>
 
     <% include ../../includes/scripts %>
-    <script>
-      var app = new Vue({
-        el: '#app',
-        data: {
-          message: 'Hello Vue!'
-        }
-      });
-    </script>
   </body>
 </html>
